<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="always" />



    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="110"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:orderInCategory="115"
        android:title="Sort"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_logout"
        android:orderInCategory="120"
        android:title="@string/action_logout"
        app:showAsAction="never" />


</menu>